--- a/.gitignore
+++ b/.gitignore
@@ -117,4 +117,8 @@ dmypy.json
 # Django Fitnotes Settings
 django_fitnotes/django_fitnotes/setting**
 
+
+# Ignore database files
+*.sqlite3
+
 # End of https://www.gitignore.io/api/code,python
